force-app/main/default/objects/PurgeSetting__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>configuração personalizada responsável pelas configurações de expurgo exceto objetos de OM, pois serão expurgados pela Job Nativo do OM</description>
    <fields>
        <fullName>ObjectName__c</fullName>
        <inlineHelpText>Nome de API do objeto que vai ter os registros excluídos (“Account”, “Order”, “vlocity_cmt__OrchestrationItem__c” )</inlineHelpText>
        <label>Nome do Objeto</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PurgeEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Expurgo Habilitado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RetentionPeriodMeasurementUnit__c</fullName>
        <label>Unidade de Medida do Período de Retenção</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RetentionPeriod__c</fullName>
        <description>Refine o período de retenção de registros do objeto selecionado. Do dia atual voltando no tempo nesse período, será mantido na org. Registros mais antigos serão deletados.</description>
        <label>Período de Retenção</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SchedulingDate__c</fullName>
        <description>&lt;Campo a ser removido&gt;</description>
        <label>SchedulingDate</label>
        <type>DateTime</type>
    </fields>
    <label>Configurações de Expurgo</label>
</CustomObject>