force-app/main/default/objects/PurgeSetting__c/fields/Frequency__c.field-meta.xml
<CustomField>
    <fullName>Frequency__c</fullName>
    <inlineHelpText>Número para representar a frequência em &quot;Meses&quot; ou &quot;Dias&quot;</inlineHelpText>
    <label>Frequência</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>