force-app/main/default/objects/PurgeSetting__c/fields/FrequencyMeasurementUnit__c.field-meta.xml
<CustomField>
    <fullName>FrequencyMeasurementUnit__c</fullName>
    <inlineHelpText>Meses&quot; ou &quot;Dias&quot;</inlineHelpText>
    <label>Unidade de Medida da Frequência</label>
    <length>255</length>
    <type>Text</type>
</CustomField>